--- a/styles/variables.less
+++ b/styles/variables.less
@@ -75,6 +75,7 @@
 @subtitle-small-s: 14px;
 //label
 @label: 22px;
+@label-s: 11px;
 //large quotes
 @quote-large-l: 33px;
 @quote-large-m: 35px;
@@ -134,7 +135,8 @@
 @line-height-body-small-m: 23px;
 @line-height-body-small-s: 18px;
 //label
-@line-height-lable: 28px;
+@line-height-label: 28px;
+@line-height-label-s: 20px;
 // Media queries
 @screen-large: ~"only screen and (min-width: 1170px)";
 @screen-medium-large: ~"only screen and (min-width: 1024px)";
